<resources>
    <string name="app_name">suma</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="boton_de_operacion_suma">presiona para sumar</string>
    <string name="mensaje_de_pantalla">¿estos son sus datos?</string>
    <string name="mensaje_formulario">rellene con sus datos por favor</string>

    <string name="nameInput">Ingrese su nombre</string>
    <string name="lastNameInput">Ingrese su apellido</string>
    <string name="ageInput">Ingrese su edad</string>
</resources>